added front page and template for challenge and answer page

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 3vmin);
   color: white;
 }
 
@@ -35,4 +35,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.btn-font{
+  font-family: sans-serif;
+  margin-top: 1rem;
+  font-size: calc(10px + 1vmin);
 }
