--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 3vmin);
+  font-size: calc(10px + 3.8vmin);
   color: white;
 }
 
@@ -40,7 +40,7 @@
 .btn-font{
   font-family: 'Baloo 2', cursive;  ;
   margin-top: 1rem;
-  font-size: calc(10px + 1vmin);
+  font-size: 1.8vmin;
   border: none;
 }
 
@@ -49,5 +49,56 @@
   color: red;
 }
 .intro{
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Playfair Display', serif;
+  /* text-align: center; */
+}
+.sub-intro{
+  font-family: 'Merriweather', serif;
+  font-size: 2vmin;
+}
+.regText{
+  font-family: 'Noto Sans', sans-serif;
+  font-size: 1.6vmin;
+}
+
+/* range value slider */
+.custom-range::-webkit-slider-thumb {
+  background: coral;
+}
+
+.custom-range::-moz-range-thumb {
+  background: coral;
+}
+
+.custom-range::-ms-thumb {
+  background: coral;
+}
+.custom-range::-webkit-slider-thumb:active {
+  background-color: coral;
+}
+
+/* nicer scrollbar */
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 0.7rem;
+  height: 0.7rem;
+  background-color: lightgrey;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 0.5rem;
+  background-color: rgba(0, 0, 0, .5);
+  box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+}
+
+
+.table.sticky th{
+  position: sticky;
+  top: 0;
+  z-index:50;
+  color: #fff;
+  border-color: #fbfcfc;
+  background-color: #343a40;
+  transform: translateY(-2px);
+
 }
